--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,34 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
+        {
+            "type": "java",
+            "name": "MyClient",
+            "request": "launch",
+            "mainClass": "ChatServer.test1.MyClient",
+            "projectName": "SocketProgramming_91f283c8"
+        },
+        {
+            "type": "java",
+            "name": "MyServer",
+            "request": "launch",
+            "mainClass": "ChatServer.test1.MyServer",
+            "projectName": "SocketProgramming_91f283c8"
+        },
+        {
+            "type": "java",
+            "name": "Client",
+            "request": "launch",
+            "mainClass": "Client.Client",
+            "projectName": "SocketProgramming_91f283c8"
+        },
+        {
+            "type": "java",
+            "name": "Server",
+            "request": "launch",
+            "mainClass": "Server.Server",
+            "projectName": "SocketProgramming_91f283c8"
+        },
         {
             "type": "java",
             "name": "Current File",
@@ -24,12 +51,6 @@
             "request": "launch",
             "mainClass": "Server",
             "projectName": "SocketProgramming_91f283c8"
-        }  
-    ],
-    "compounds": [
-        {
-            "name": "Compound",
-            "configurations": ["Server", "Client"]
         }
     ]
 }
